network.tf
resource "azurerm_virtual_network" "vnet" {
    name                = var.vnet_name
    resource_group_name = azurerm_resource_group.rg.name
    location            = azurerm_resource_group.rg.location
    address_space       = ["10.0.0.0/16"]


}


resource "azurerm_subnet" "subnet" {
    name    = var.subnet.name
    resource_group_name   = azurerm_resource_group.rg.name
    virtual_network_name   = azurerm_virtual_network.vnet.name
    address_prefixes       = ["10.0.1.0/24"]

}
